Improved dark and light theme colors and styling

--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -1,4 +1,5 @@
 button {
+	color: inherit;
 	background-color: var(--clr-element);
 	border: 1px solid var(--clr-element-border);
 	border-radius: 0.25rem;
