--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -1,5 +1,8 @@
 button {
 	color: inherit;
+}
+
+.btn {
 	background-color: var(--clr-element);
 	border: 1px solid var(--clr-element-border);
 	border-radius: 0.25rem;
