--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,9 +12,10 @@
 
 html {
 	min-height: 100%;
+	scrollbar-gutter: stable;
 }
 
 body {
 	min-height: 100%;
-	padding: 1rem;
+	padding: 1rem 0.25rem;
 }
