--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,3 +1,4 @@
+// light theme
 $clr-bg-1-light: #e6e8ea;
 $clr-bg-2-light: #a7a7aa;
 $clr-panel-bg-light: hsl(240 8% 99%);
@@ -8,6 +9,19 @@ $clr-translucent-light: hsl(240 5% 95% / 0.5);
 
 $bg-pattern-light: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23a7a7aa' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 
+$clr-lecture-background-light: #C9DEF0;
+$clr-lecture-border-light: #8EBAD4;
+
+$clr-auditory-background-light: #D4F3FA;
+$clr-auditory-border-light: #96D5E3;
+
+$clr-lab-background-light: #FAD2D2;
+$clr-lab-border-light: #E69E9E;
+
+$clr-other-background-light: #e8e8e8;
+$clr-other-border-light: #cccccc;
+
+// dark theme
 $clr-bg-1-dark: #090909;
 $clr-bg-2-dark: #323232;
 $clr-panel-bg-dark: hsl(180 6% 10%);
@@ -18,6 +32,18 @@ $clr-translucent-dark: hsl(200 10% 18% / 0.4);
 
 $bg-pattern-dark: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23323232' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 
+$clr-lecture-background-dark: #256A8F;
+$clr-lecture-border-dark: #124B69;
+
+$clr-auditory-background-dark: #4592BF;
+$clr-auditory-border-dark: #2C6C91;
+
+$clr-lab-background-dark: #AB504B;
+$clr-lab-border-dark: #782E2A;
+
+$clr-other-background-dark: #5f6161;
+$clr-other-border-dark: #3f4141;
+
 // defaults to dark theme
 :root {
 	--clr-bg-1: #{$clr-bg-1-dark};
@@ -27,7 +53,21 @@ $bg-pattern-dark: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 	--clr-element: #{$clr-element-dark};
 	--clr-element-border: #{$clr-element-border-dark};
 	--clr-translucent: #{$clr-translucent-dark};
+
 	--bg-pattern: #{$bg-pattern-dark};
+
+	--clr-lecture-background: #{$clr-lecture-background-dark};
+	--clr-lecture-border: #{$clr-lecture-border-dark};
+
+	--clr-auditory-background: #{$clr-auditory-background-dark};
+	--clr-auditory-border: #{$clr-auditory-border-dark};
+
+	--clr-lab-background: #{$clr-lab-background-dark};
+	--clr-lab-border: #{$clr-lab-border-dark};
+
+	--clr-other-background: #{$clr-other-background-dark};
+	--clr-other-border: #{$clr-other-border-dark};
+
 	color: #f5f5f5;
 }
 
@@ -41,7 +81,20 @@ $bg-pattern-dark: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 		--clr-element-border: #{$clr-element-border-light};
 		--clr-translucent: #{$clr-translucent-light};
 		--bg-pattern: #{$bg-pattern-light};
+		
 		color: #0a0a0a;
+		
+		--clr-lecture-background: #{$clr-lecture-background-light};
+		--clr-lecture-border: #{$clr-lecture-border-light};
+	
+		--clr-auditory-background: #{$clr-auditory-background-light};
+		--clr-auditory-border: #{$clr-auditory-border-light};
+	
+		--clr-lab-background: #{$clr-lab-background-light};
+		--clr-lab-border: #{$clr-lab-border-light};
+	
+		--clr-other-background: #{$clr-other-background-light};
+		--clr-other-border: #{$clr-other-border-light};
 	}
 }
 
