Added prettier, set up svelte/typescript/eslint/prettier configs

--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -8,7 +8,12 @@ button {
 	font: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-size: 1rem;
 	font-weight: normal;
 	line-height: 1;
