--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -5,8 +5,8 @@
 	font-weight: 300;
 	src:
 		local(""),
-		url("/fonts/poppins-v20-latin-300.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		url("/fonts/poppins-v20-latin-300.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+		url("/fonts/poppins-v20-latin-300.woff2") format("woff2"),
+		/* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/poppins-v20-latin-300.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* poppins-italic - latin */
@@ -16,8 +16,8 @@
 	font-weight: 300;
 	src:
 		local(""),
-		url("/fonts/poppins-v20-latin-300italic.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		url("/fonts/poppins-v20-latin-300italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+		url("/fonts/poppins-v20-latin-300italic.woff2") format("woff2"),
+		/* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/poppins-v20-latin-300italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* poppins-600 - latin */
@@ -27,8 +27,8 @@
 	font-weight: 600;
 	src:
 		local(""),
-		url("/fonts/poppins-v20-latin-600.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		url("/fonts/poppins-v20-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+		url("/fonts/poppins-v20-latin-600.woff2") format("woff2"),
+		/* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/poppins-v20-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* poppins-600italic - latin */
@@ -38,6 +38,6 @@
 	font-weight: 600;
 	src:
 		local(""),
-		url("/fonts/poppins-v20-latin-600italic.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		url("/fonts/poppins-v20-latin-600italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+		url("/fonts/poppins-v20-latin-600italic.woff2") format("woff2"),
+		/* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/poppins-v20-latin-600italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
