--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -9,14 +9,14 @@ $clr-translucent-light: hsl(240 5% 95% / 0.5);
 
 $bg-pattern-light: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23a7a7aa' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 
-$clr-lecture-background-light: #C9DEF0;
-$clr-lecture-border-light: #8EBAD4;
+$clr-lecture-background-light: #c9def0;
+$clr-lecture-border-light: #8ebad4;
 
-$clr-auditory-background-light: #D4F3FA;
-$clr-auditory-border-light: #96D5E3;
+$clr-auditory-background-light: #d4f3fa;
+$clr-auditory-border-light: #96d5e3;
 
-$clr-lab-background-light: #FAD2D2;
-$clr-lab-border-light: #E69E9E;
+$clr-lab-background-light: #fad2d2;
+$clr-lab-border-light: #e69e9e;
 
 $clr-other-background-light: #e8e8e8;
 $clr-other-border-light: #cccccc;
@@ -32,14 +32,14 @@ $clr-translucent-dark: hsl(200 10% 18% / 0.4);
 
 $bg-pattern-dark: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23323232' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 
-$clr-lecture-background-dark: #256A8F;
-$clr-lecture-border-dark: #124B69;
+$clr-lecture-background-dark: #256a8f;
+$clr-lecture-border-dark: #124b69;
 
-$clr-auditory-background-dark: #4592BF;
-$clr-auditory-border-dark: #2C6C91;
+$clr-auditory-background-dark: #4592bf;
+$clr-auditory-border-dark: #2c6c91;
 
-$clr-lab-background-dark: #AB504B;
-$clr-lab-border-dark: #782E2A;
+$clr-lab-background-dark: #ab504b;
+$clr-lab-border-dark: #782e2a;
 
 $clr-other-background-dark: #5f6161;
 $clr-other-border-dark: #3f4141;
@@ -81,18 +81,18 @@ $clr-other-border-dark: #3f4141;
 		--clr-element-border: #{$clr-element-border-light};
 		--clr-translucent: #{$clr-translucent-light};
 		--bg-pattern: #{$bg-pattern-light};
-		
+
 		color: #0a0a0a;
-		
+
 		--clr-lecture-background: #{$clr-lecture-background-light};
 		--clr-lecture-border: #{$clr-lecture-border-light};
-	
+
 		--clr-auditory-background: #{$clr-auditory-background-light};
 		--clr-auditory-border: #{$clr-auditory-border-light};
-	
+
 		--clr-lab-background: #{$clr-lab-background-light};
 		--clr-lab-border: #{$clr-lab-border-light};
-	
+
 		--clr-other-background: #{$clr-other-background-light};
 		--clr-other-border: #{$clr-other-border-light};
 	}
