--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -1,3 +1,5 @@
+@use "theme";
+
 :root {
 	font-family: "Poppins", sans-serif;
 	font-size: 16px;
@@ -27,4 +29,11 @@ p {
 b,
 strong {
 	font-weight: 600;
+}
+
+code {
+	background-color: var(--clr-element);
+	border: 1px solid var(--clr-element-border);
+	border-radius: 0.25rem;
+	padding-inline: 0.125rem;
 }
