--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -18,7 +18,6 @@ h5,
 h6 {
 	font-size: 1rem;
 	font-weight: normal;
-	line-height: 1;
 	margin: 0;
 }
 
@@ -50,4 +49,17 @@ a {
 	&:active {
 		text-decoration: 1px solid underline currentColor;
 	}
+}
+
+// taken from TailwindCSS
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
 }
