Translated everything to croatian

--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -34,7 +34,7 @@ code {
 	background-color: var(--clr-element);
 	border: 1px solid var(--clr-element-border);
 	border-radius: 0.25rem;
-	padding-inline: 0.125rem;
+	padding-inline: 3px;
 }
 
 $link-clr: #1584f3;
